# posture_mddatathon_2025

./: .gitignore  README.md  flake.nix  pyproject.toml
data/: README.md
output/: normal_posture_notes.csv  posture_data_preprocessed_abridged.csv  posture_data_preprocessed_abridged.pkl  scoliosis_diagnoses.csv
scripts/: explore.ipynb  filter_scoliosis_icd.py  nlp.ipynb  posture_random_forest.ipynb  posture_random_forest_age_cohorts.ipynb  posture_random_forest_mortality.ipynb
