[project]
name = "impure-package"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "blis>=1.3.0",
    "nmslib>=2.1.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "scispacy>=0.2.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.8",
    "thinc>=8.3.8",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wfdb>=4.3.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "black>=25.9.0",
    "jupyterlab>=4.4.10",
    "ruff>=0.14.3",
]
